added/updated/improved code to check whether links to COCO data are still working (original work done by Mathias Onimus in June 2024)

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Contributors to this repository have been
 - Dimo Brockhoff (3)
 - Nikolaus Hansen (3)
 - Filip Matzner
+- Mathias Onimus
 - Phillipe R. Sampaio (2)
 - Dejan Tusar (3)
 - Tea Tusar (3)
